# llm-application

./: .pre-commit-config.yaml  README.md  main.py  makefile  pyproject.toml
.github/workflows/: linting.yaml
rest/: service.py
