[project]
name = "llm-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "streamlit>=1.41.1",
]

[project.optional-dependencies]
tests = [
    "pytest>=8.3.4",
]

[dependency-groups]
dev = [
    "isort>=6.0.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.2",
]
